--- a/exercicios/ex0001/style.css
+++ b/exercicios/ex0001/style.css
@@ -1,25 +1,32 @@
 @charset "UTF-8";
 
+*{
+    text-align: justify;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+h1{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 span{
    text-decoration: underline;
    font-style: oblique;
    font-weight: bolder;
 }
 Body {
-    background-color:rgb(248, 178, 92);
+    background-color:rgb(255, 173, 72);
     font-family: Arial, Helvetica, sans-serif;
 }
 header{
-    background-color: rgb(241, 189, 44);
+    background-color: rgb(255, 163, 42);
     text-align: center;
     text-decoration: underline;
     font-size: 30px;
 }
 article{
-    background-color: rgba(255, 156, 63, 0.664);
+    background-color: rgba(255, 156, 63, 0);
     height: 300px;
     width: 375px;
-    border: 10px solid  rgb(253, 140, 35);
+    border: 10px solid  rgb(255, 124, 1);
     padding: 5px;
     margin: auto;
     outline-width: 5px;
@@ -38,6 +45,7 @@ main{
     font-size: 20px;
     text-align: justify;
     outline: 10px solid rgb(253, 140, 35) ;
+    background-color: rgba(240, 248, 255, 0.644);
 
 }
 
@@ -73,7 +81,8 @@ h3{
     text-align: center;
     font-size: 30px;
     text-decoration: underline;
-    background-color: rgb(241, 179, 44);
+    background-color: rgb(255, 166, 0);
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 h4{
