--- a/testes-desafios/desafio012/style.css
+++ b/testes-desafios/desafio012/style.css
@@ -1,14 +1,23 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
+
+:root{
+    --fonte1:Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Sofadi One';
+    --fonte3: "Rubik Mono One", monospace;
+}
 
 *{
    margin: 0px;
    padding: 0px; 
+
 }
 
 html, body{
     min-height: 100%;
     background-color: darkgray;
-
+    font-family: var(--fonte1);
 
 }
 
@@ -16,12 +25,14 @@ header{
     background-color: black;
     color: white;
     text-align: center;
-    padding-top: 40px;
+    padding-top: 50px;
     padding-bottom: 50px;
 }
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
+    font-family: var(--fonte3);
 }
 
 header a, footer a {
@@ -44,8 +55,11 @@ footer{
 section{
     padding-top: 10vh;
     padding-bottom: 10vh;
-    line-height: 2em;
+    line-height: 1.5em;
     padding-left: 30px;
+    font-family: var(--fonte2);
+    color: black;
+    font-size: 4.2vw;
 }
 
 section.normal{
@@ -55,14 +69,14 @@ section.normal{
 
 section.imagem1 > p {
     background-color: rgba(0, 0, 0, 0.322);
-    width: 400px;
     border-radius: 10px;
+    display: inline-block;
 }
 
 section.imagem2 > p {
     background-color: rgba(0, 0, 0, 0.322);
-    width: 400px;
     border-radius: 10px;
+    display: inline-block;
 }
 
 section.imagem1{
